--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-streamlit==1.39.0
-pandas==2.2.2
+streamlit<2.0,>=1.28
+pandas<2.3,>=2.0
 Pillow==10.4.0
 pyzbar==0.1.9
 opencv-python-headless==4.10.0.84
 fpdf2==2.7.8
 openpyxl==3.1.2
 python-dateutil==2.9.0.post0
+psycopg[binary]==3.2.3
+plotly==5.24.1
